# jobmarket

./: .gitignore  Makefile  README.md  demo_auto_with_key_output.txt  demo_auto_without_key_output.txt  demo_replies_from_notebook.txt  mleng_take_home_task.ipynb  presentation.md  pyproject.toml
api/: main.py  schemas.py
api/routers/: kg.py  rag.py
data/: sample_companies.csv  sample_skills.csv
jobmarket/: config.py  data.py
jobmarket/kg/: build.py  pipeline.py  queries.py  taxonomy.py
jobmarket/rag/: chunking.py  generation.py  pipeline.py  retrieval.py  vector_store.py
