[project]
name = "mleng-take-home-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "sentence-transformers>=5.6.0",
    "turbovec>=0.8.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
